# insanely-fast-whisper-api

./: Dockerfile  main.py  pyproject.toml
app/: app.py  diarization_pipeline.py  schema.py
static/: index.html
testsrc/: debug_whisper.py
